--- a/explor/css/style.css
+++ b/explor/css/style.css
@@ -93,13 +93,15 @@ body {
   width: 100%; }
   .fxCon .swiper-container {
     width: 100%;
-    height: 135px; }
+    min-height: 100px; }
     .fxCon .swiper-container .swiper-pagination-bullet {
       opacity: 0.3;
       background: #fff; }
     .fxCon .swiper-container .swiper-pagination-bullet-active {
       opacity: 0.8;
       background: #fff; }
+    .fxCon .swiper-container .swiper-pagination {
+      display: none; }
   .fxCon .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -135,7 +137,7 @@ body {
     font-size: 1.2rem;
     color: #666;
     text-align: center;
-    border-bottom: 1px solid #e0e0e0; }
+    border-bottom: 1px solid #f5f5fb; }
     .fxCon .entrance .item {
       position: relative;
       -webkit-box-flex: 1;
@@ -151,16 +153,18 @@ body {
         line-height: 2; }
     .fxCon .entrance .item1 img {
       width: 20.5px;
-      height: 16.5px; }
+      height: 16.5px;
+      margin-top: 4px; }
     .fxCon .entrance .item2 img {
       width: 15px;
       height: 22px; }
     .fxCon .entrance .item3 img {
       width: 20px;
-      height: 19px; }
+      height: 19px;
+      margin-top: 3px; }
   .fxCon .hotsList {
     text-align: center;
-    border-bottom: 1px solid #e0e0e0;
+    border-bottom: 1px solid #f5f5fb;
     padding-left: 5px;
     padding-right: 5px;
     font-size: 0;
@@ -191,7 +195,7 @@ body {
         top: 0px;
         left: 0px;
         border-radius: 5px;
-        font-size: 1.4rem;
+        font-size: 1rem;
         color: #fff;
         z-index: 20; }
         .fxCon .hotsList .item .msg a {
@@ -202,34 +206,39 @@ body {
           text-decoration: none; }
           .fxCon .hotsList .item .msg a span {
             display: table-cell;
-            vertical-align: middle; }
+            vertical-align: middle;
+            padding-top: 2px; }
         .fxCon .hotsList .item .msg i {
           display: block;
           width: 100%;
-          line-height: 20px;
-          font-size: 1.4rem;
+          line-height: 16px;
+          font-size: 1.1rem;
           color: #fff; }
+        .fxCon .hotsList .item .msg .name {
+          font-weight: bold; }
         .fxCon .hotsList .item .msg .price {
-          font-size: 1.2rem; }
+          font-size: 1rem; }
       .fxCon .hotsList .item .shade {
-        background: #000;
+        background: url(../images/index/shade.png) no-repeat;
+        background-size: cover;
         opacity: 0.4;
         z-index: 10; }
   .fxCon .cmsList {
-    width: 90%;
+    padding-left: 20px;
+    box-sizing: border-box;
     margin: auto; }
     .fxCon .cmsList .title {
       font-size: 1.6rem;
-      font-weight: bold;
       margin-top: 15px;
-      width: 100%; }
+      width: 100%;
+      color: #666; }
     .fxCon .cmsList .listCon {
       width: 100%; }
       .fxCon .cmsList .listCon .item {
         width: 100%;
         padding-top: 15px;
         padding-bottom: 15px;
-        border-bottom: 1px solid #e0e0e0;
+        border-top: 1px solid #f5f5fb;
         height: 100%;
         overflow: hidden;
         display: table;
@@ -269,7 +278,8 @@ body {
             font-size: 1.5rem;
             margin-left: 15px;
             color: #333;
-            line-height: 1.4; }
+            line-height: 1.4;
+            padding-right: 20px; }
             .fxCon .cmsList .listCon .item .msg .tm .tip {
               color: #fc5e5d;
               font-size: 0.9rem;
@@ -282,6 +292,9 @@ body {
             color: #999;
             line-height: 1.5;
             position: relative; }
+            .fxCon .cmsList .listCon .item .msg .bm .tit {
+              line-height: 1.5;
+              display: inline-block; }
             .fxCon .cmsList .listCon .item .msg .bm .date {
               margin-left: 14px; }
             .fxCon .cmsList .listCon .item .msg .bm .tip {
@@ -290,11 +303,11 @@ body {
               margin-left: 4px; }
             .fxCon .cmsList .listCon .item .msg .bm .favor {
               position: absolute;
-              right: 0px; }
+              right: 20px; }
               .fxCon .cmsList .listCon .item .msg .bm .favor .rIcon {
                 background: url("../images/index/readCon.png") no-repeat;
                 width: 16px;
-                height: 10px;
+                height: 9px;
                 background-size: contain;
                 display: inline-block; }
               .fxCon .cmsList .listCon .item .msg .bm .favor .rNum {
@@ -304,25 +317,31 @@ body {
                 margin-top: 3px; }
               .fxCon .cmsList .listCon .item .msg .bm .favor .icon {
                 background: url("../images/index/nofavor.png") no-repeat;
-                width: 12px;
-                height: 10px;
+                width: 11px;
+                height: 9px;
                 background-size: contain;
-                display: inline-block; }
+                display: inline-block;
+                margin-top: 2px; }
               .fxCon .cmsList .listCon .item .msg .bm .favor .selected {
                 background: url("../images/index/favor.png") no-repeat;
                 background-size: contain; }
               .fxCon .cmsList .listCon .item .msg .bm .favor .num {
                 font-size: 1rem;
                 display: inline-block;
-                margin-top: 3px; }
+                margin-top: 2px; }
+      .fxCon .cmsList .listCon .firstItem {
+        border-top: none; }
   .fxCon .loadMore {
     width: 100%;
     height: 42px;
-    text-align: center; }
+    text-align: center;
+    border-top: 1px solid #f5f5fb; }
     .fxCon .loadMore span {
       display: block;
       font-size: 1.3rem;
       color: #666;
       line-height: 42px; }
+  .fxCon .loadEnd {
+    height: 30px; }
 
 /*# sourceMappingURL=style.css.map */
