--- a/explor/css/style.scss
+++ b/explor/css/style.scss
@@ -14,7 +14,7 @@ body{
 	width:100%;
 	.swiper-container {
         width: 100%;
-		height: 135px;
+		min-height: 100px;
 		.swiper-pagination-bullet{
 			opacity: 0.3;
 			background: #fff;
@@ -22,6 +22,9 @@ body{
 		.swiper-pagination-bullet-active{
 			opacity: 0.8;
 			background: #fff;
+		};
+		.swiper-pagination{
+			display:none;
 		}
   	}
   .swiper-slide {
@@ -63,7 +66,7 @@ body{
 		font-size: 1.2rem;
 		color: #666;
 		text-align: center;
-		border-bottom: 1px solid #e0e0e0;
+		border-bottom: 1px solid #f5f5fb;
 		.item{
 			position: relative;
 			-webkit-box-flex:1;
@@ -83,6 +86,7 @@ body{
 		.item1 img{
 			width:20.5px;
 			height:16.5px;
+			margin-top:4px;
 		};
 		.item2 img{
 			width:15px;
@@ -91,14 +95,15 @@ body{
 		.item3 img{
 			width:20px;
 			height:19px;
+			margin-top:3px;
 		};
 	}
 	.hotsList{
 		text-align: center;
-    border-bottom: 1px solid #e0e0e0;
-    padding-left: 5px;
-    padding-right: 5px;
-    font-size: 0;
+	    border-bottom: 1px solid #f5f5fb;
+	    padding-left: 5px;
+	    padding-right: 5px;
+	    font-size: 0;
 		padding-top:10px;
 		padding-bottom: 10px;
 		.item{
@@ -128,7 +133,7 @@ body{
 				top:0px;
 				left:0px;
 				border-radius: 5px;
-				font-size:1.4rem;
+				font-size:1rem;
 				color:#fff;
 				z-index: 20;
 				a{
@@ -140,38 +145,43 @@ body{
 					span{
 						display: table-cell;
 						vertical-align: middle;
+						padding-top:2px;
 					}
 				};
 
 				i{
 				  display: block;
 					width:100%;
-					line-height: 20px;
-					font-size:1.4rem;
+					line-height: 16px;
+					font-size:1.1rem;
 					color:#fff;
 				};
 				.name{
 					// margin-top:15px;
+					font-weight: bold;
 				};
 				.price{
-					font-size:1.2rem;
+					font-size:1rem;
 				}
 			};
 			.shade{
-				background: #000;
+				background: url(../images/index/shade.png) no-repeat;
+				background-size:cover;
 				opacity: 0.4;
 				z-index: 10;
 			}
 		}
 	}
 	.cmsList{
-		width:90%;
+		//width:90%;
+		padding-left:20px;
+		box-sizing:border-box;
 		margin:auto;
 		.title{
 			font-size:1.6rem;
-			font-weight: bold;
 			margin-top:15px;
 			width:100%;
+			color:#666;
 		};
 		.listCon{
 			width:100%;
@@ -179,7 +189,7 @@ body{
 				width:100%;
 				padding-top:15px;
 				padding-bottom: 15px;
-				border-bottom:1px solid #e0e0e0;
+				border-top:1px solid #f5f5fb;
 				height:100%;
 				overflow:hidden;
 				display: table;
@@ -227,6 +237,7 @@ body{
 						margin-left:15px;
 						color: #333;
 						line-height: 1.4;
+						padding-right:20px;
 						.tip{
 							color:#fc5e5d;
 							font-size: 0.9rem;
@@ -242,7 +253,9 @@ body{
 						line-height: 1.5;
 						position: relative;
 						.tit{
-
+							line-height:1.5;
+							
+							display:inline-block;
 						};
 						.date{
 							margin-left:14px;
@@ -254,11 +267,11 @@ body{
 						};
 						.favor{
 							position: absolute;
-							right:0px;
+							right:20px;
 							.rIcon{
 								background:url("../images/index/readCon.png") no-repeat;
 								width:16px;
-								height:10px;
+								height:9px;
 								background-size:contain;
 								display:inline-block;
 							};
@@ -270,10 +283,11 @@ body{
 							};
 							.icon{
 								background:url("../images/index/nofavor.png") no-repeat;
-								width:12px;
-								height:10px;
+								width:11px;
+								height:9px;
 								background-size:contain;
 								display:inline-block;
+								margin-top:2px;
 							};
 							.selected{
 								background:url("../images/index/favor.png") no-repeat;
@@ -282,24 +296,31 @@ body{
 							.num{
 								font-size: 1rem;
 								display:inline-block;
-								margin-top: 3px;
+								margin-top: 2px;
 							}
 						}
 
 					}
 				}
-			}
+			};
+			.firstItem{
+				border-top:none;
+			};
 		}
 	}
 	.loadMore{
 		width:100%;
 		height:42px;
 		text-align: center;
+		border-top:1px solid #f5f5fb;
 		span{
 			display: block;
 			font-size: 1.3rem;
 			color:#666;
 			line-height: 42px;
 		}
+	}
+	.loadEnd{
+		height:30px;
 	}
 }
