--- a/explor/css/style.css
+++ b/explor/css/style.css
@@ -90,7 +90,33 @@ body {
   font-size: 12px; }
 
 .fxCon {
-  width: 100%; }
+  width: 100%;
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden; }
+  .fxCon .scroller {
+    position: absolute;
+    z-index: 1;
+    -webkit-tap-highlight-color: transparent;
+    width: 100%;
+    -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+    -o-text-size-adjust: none;
+    text-size-adjust: none; }
   .fxCon .swiper-container {
     width: 100%;
     min-height: 100px; }
@@ -122,11 +148,12 @@ body {
     .fxCon .swiper-slide a {
       display: block;
       width: 100%;
-      height: 100%; }
+      height: 100%;
+      vertical-align: middle; }
     .fxCon .swiper-slide img {
       position: relative;
       width: 100%;
-      height: 100%; }
+      vertical-align: middle; }
   .fxCon .entrance {
     width: 100%;
     height: 70px;
@@ -335,7 +362,8 @@ body {
     width: 100%;
     height: 42px;
     text-align: center;
-    border-top: 1px solid #f5f5fb; }
+    border-top: 1px solid #f5f5fb;
+    border-bottom: 1px solid #f5f5fb; }
     .fxCon .loadMore span {
       display: block;
       font-size: 1.3rem;
@@ -343,5 +371,8 @@ body {
       line-height: 42px; }
   .fxCon .loadEnd {
     height: 30px; }
+  .fxCon .lb {
+    width: 100%;
+    height: 44px; }
 
 /*# sourceMappingURL=style.css.map */
