--- a/explor/css/style.scss
+++ b/explor/css/style.scss
@@ -12,6 +12,33 @@ body{
 //发现首页
 .fxCon{
 	width:100%;
+	position: absolute;
+	z-index: 1;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	overflow: hidden;
+	.scroller{
+		position: absolute;
+		z-index: 1;
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
+		width: 100%;
+		-webkit-transform: translateZ(0);
+		-moz-transform: translateZ(0);
+		-ms-transform: translateZ(0);
+		-o-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-touch-callout: none;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		-webkit-text-size-adjust: none;
+		-moz-text-size-adjust: none;
+		-ms-text-size-adjust: none;
+		-o-text-size-adjust: none;
+		text-size-adjust: none;
+	};
 	.swiper-container {
         width: 100%;
 		min-height: 100px;
@@ -48,11 +75,12 @@ body{
       	display:block;
       	width:100%;
       	height:100%;
+				vertical-align: middle;
       };
 	  img{
 		position: relative;
 		width:100%;
-		height:100%;
+		vertical-align: middle;
 	  }
   }
 
@@ -254,7 +282,7 @@ body{
 						position: relative;
 						.tit{
 							line-height:1.5;
-							
+
 							display:inline-block;
 						};
 						.date{
@@ -313,6 +341,7 @@ body{
 		height:42px;
 		text-align: center;
 		border-top:1px solid #f5f5fb;
+		border-bottom:1px solid #f5f5fb;
 		span{
 			display: block;
 			font-size: 1.3rem;
@@ -322,5 +351,9 @@ body{
 	}
 	.loadEnd{
 		height:30px;
+	};
+	.lb{
+		width:100%;
+		height:44px;
 	}
 }
