--- a/explor/css/style.css
+++ b/explor/css/style.css
@@ -119,7 +119,7 @@ body {
     text-size-adjust: none; }
   .fxCon .swiper-container {
     width: 100%;
-    min-height: 100px; }
+    min-height: 50px; }
     .fxCon .swiper-container .swiper-pagination-bullet {
       opacity: 0.3;
       background: #fff; }
@@ -183,8 +183,9 @@ body {
       height: 16.5px;
       margin-top: 4px; }
     .fxCon .entrance .item2 img {
-      width: 15px;
-      height: 22px; }
+      width: 20px;
+      height: 19px;
+      margin-top: 3px; }
     .fxCon .entrance .item3 img {
       width: 20px;
       height: 19px;
@@ -258,9 +259,12 @@ body {
       font-size: 1.6rem;
       margin-top: 15px;
       width: 100%;
-      color: #666; }
+      color: #666;
+      height: 30px; }
     .fxCon .cmsList .listCon {
-      width: 100%; }
+      width: 100%;
+      height: 100%;
+      overflow: auto; }
       .fxCon .cmsList .listCon .item {
         width: 100%;
         padding-top: 15px;
@@ -277,13 +281,15 @@ body {
         .fxCon .cmsList .listCon .item .img {
           width: 95px;
           max-width: 95px;
+          height: 63px;
           display: table-cell;
           vertical-align: middle;
           position: relative; }
           .fxCon .cmsList .listCon .item .img * {
             vertical-align: middle; }
           .fxCon .cmsList .listCon .item .img img {
-            width: 100%; }
+            width: 100%;
+            max-height: 63px; }
           .fxCon .cmsList .listCon .item .img .movieIcon {
             display: block;
             width: 24px;
@@ -306,7 +312,11 @@ body {
             margin-left: 15px;
             color: #333;
             line-height: 1.4;
-            padding-right: 20px; }
+            padding-right: 20px;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden; }
             .fxCon .cmsList .listCon .item .msg .tm .tip {
               color: #fc5e5d;
               font-size: 0.9rem;
