--- a/explor/css/style.scss
+++ b/explor/css/style.scss
@@ -18,6 +18,8 @@ body{
 	bottom: 0;
 	left: 0;
 	overflow: hidden;
+	//overflow: auto;
+	//-webkit-overflow-scrolling: touch;
 	.scroller{
 		position: absolute;
 		z-index: 1;
@@ -41,7 +43,7 @@ body{
 	};
 	.swiper-container {
         width: 100%;
-		min-height: 100px;
+		min-height: 50px;
 		.swiper-pagination-bullet{
 			opacity: 0.3;
 			background: #fff;
@@ -117,8 +119,9 @@ body{
 			margin-top:4px;
 		};
 		.item2 img{
-			width:15px;
-			height:22px;
+			width:20px;
+			height:19px;
+			margin-top:3px;
 		};
 		.item3 img{
 			width:20px;
@@ -210,9 +213,12 @@ body{
 			margin-top:15px;
 			width:100%;
 			color:#666;
+			height: 30px;
 		};
 		.listCon{
 			width:100%;
+			height: 100%;
+    	overflow: auto;
 			.item{
 				width:100%;
 				padding-top:15px;
@@ -230,6 +236,7 @@ body{
 				.img{
 					width:95px;
 					max-width: 95px;
+					height: 63px;
 					display: table-cell;
 					vertical-align: middle;
 					position: relative;
@@ -238,6 +245,7 @@ body{
 			        };
 					img{
 						width:100%;
+						max-height: 63px;
 					};
 					.movieIcon{
 						display:block;
@@ -266,6 +274,12 @@ body{
 						color: #333;
 						line-height: 1.4;
 						padding-right:20px;
+						// max-height: 42px;
+						// overflow: hidden;
+						display: -webkit-box;
+				    -webkit-line-clamp: 2;
+				    -webkit-box-orient: vertical;
+				    overflow: hidden;
 						.tip{
 							color:#fc5e5d;
 							font-size: 0.9rem;
@@ -355,5 +369,6 @@ body{
 	.lb{
 		width:100%;
 		height:44px;
+		//margin-bottom: 150px;
 	}
 }
