--- a/explor/css/style.css
+++ b/explor/css/style.css
@@ -119,7 +119,8 @@ body {
     text-size-adjust: none; }
   .fxCon .swiper-container {
     width: 100%;
-    min-height: 50px; }
+    min-height: 50px;
+    height: 135px; }
     .fxCon .swiper-container .swiper-pagination-bullet {
       opacity: 0.3;
       background: #fff; }
@@ -192,6 +193,7 @@ body {
       margin-top: 3px; }
   .fxCon .hotsList {
     text-align: center;
+    height: 68px;
     border-bottom: 1px solid #f5f5fb;
     padding-left: 5px;
     padding-right: 5px;
@@ -204,12 +206,17 @@ body {
       display: inline-block;
       width: 33.333%;
       font-size: 0;
-      max-height: 68px; }
+      max-height: 68px;
+      height: 68px;
+      overflow: auto; }
       .fxCon .hotsList .item .itemCon {
         width: 90%;
         position: relative;
         margin: 0 auto;
-        max-height: 68px; }
+        max-height: 68px;
+        height: 68px;
+        height: 100%;
+        overflow: auto; }
       .fxCon .hotsList .item img {
         display: block;
         margin: auto;
