--- a/explore/css/style.css
+++ b/explore/css/style.css
@@ -119,8 +119,7 @@ body {
     text-size-adjust: none; }
   .fxCon .swiper-container {
     width: 100%;
-    min-height: 50px;
-    height: 135px; }
+    min-height: 50px; }
     .fxCon .swiper-container .swiper-pagination-bullet {
       opacity: 0.3;
       background: #fff; }
@@ -390,6 +389,13 @@ body {
     height: 30px; }
   .fxCon .lb {
     width: 100%;
-    height: 44px; }
+    height: 59px; }
+
+.fixed-ft {
+  z-index: 1000; }
+
+@media only screen and (max-device-width: 320px) {
+  .fxCon .swiper-container {
+    height: 115px; } }
 
 /*# sourceMappingURL=style.css.map */
