--- a/explore/css/style.scss
+++ b/explore/css/style.scss
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 @import
 	"reset.scss";
-// f
 html{
 	font-size: 10px;
 }
@@ -18,8 +17,6 @@ body{
 	bottom: 0;
 	left: 0;
 	overflow: hidden;
-	//overflow: auto;
-	//-webkit-overflow-scrolling: touch;
 	.scroller{
 		position: absolute;
 		z-index: 1;
@@ -44,7 +41,7 @@ body{
 	.swiper-container {
         width: 100%;
 		min-height: 50px;
-		height: 135px;
+		//height: 135px;
 		.swiper-pagination-bullet{
 			opacity: 0.3;
 			background: #fff;
@@ -196,7 +193,6 @@ body{
 					color:#fff;
 				};
 				.name{
-					// margin-top:15px;
 					font-weight: bold;
 				};
 				.price{
@@ -376,7 +372,13 @@ body{
 	};
 	.lb{
 		width:100%;
-		height:44px;
-		//margin-bottom: 150px;
+		height:59px;
 	}
+}
+.fixed-ft{
+	z-index: 1000;
+}
+@media only screen and (max-device-width:320px){
+  .fxCon .swiper-container {
+    height: 115px; }
 }
